# kingbird

./: .coveragerc  .gitignore  .gitreview  .mailmap  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  config-generator.conf  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
cmd/: README.rst  api.py  engine.py  jobdaemon.py  jobworker.py  manage.py
devstack/: README.rst  local.conf.sample  plugin.sh  settings
doc/source/: conf.py  configuration.rst  index.rst  installation.rst  usage.rst
etc/: README.rst  api.conf  engine.conf  jobdaemon.conf  jobworker.conf
etc/kingbird/: README-kingbird.conf.txt  policy.json
kingbird/: __init__.py  version.py
kingbird/api/: README.rst  api_config.py  apicfg.py  app.py  enforcer.py
kingbird/api/controllers/: README.rst  helloworld.py  quota_manager.py  resource_manager.py  restcomm.py  root.py  sync_manager.py
kingbird/cmd/: README.rst  api.py  engine.py  manage.py
kingbird/common/: baserpc.py  client.py  config.py  consts.py  context.py  endpoint_cache.py  exceptions.py  i18n.py  manager.py  messaging.py  policy.py  rpc.py  serializer.py  service.py  topics.py  utils.py  version.py
kingbird/db/: api.py  base.py  migration.py  utils.py
kingbird/db/sqlalchemy/: api.py  migration.py  models.py
kingbird/drivers/: README.rst  base.py
kingbird/drivers/openstack/: cinder_v2.py  cinder_v3.py  glance_adapter.py  glance_v2.py  keystone_v3.py  neutron_v2.py  nova_v2.py  sdk.py
kingbird/engine/: README.rst  engine_cfg.py  engine_config.py  flavor_sync_manager.py  image_sync_manager.py  keypair_sync_manager.py  kingbird_lock.py  listener.py  quota_manager.py  resource_manager.py  scheduler.py  service.py  sync_manager.py
kingbird/jobdaemon/: README.rst  jdcfg.py  jdmanager.py  jdrpcapi.py  jdservice.py
kingbird/jobworker/: README.rst  jwcfg.py  jwmanager.py  jwrpcapi.py  jwservice.py
kingbird/objects/: base.py  service.py
kingbird/rpc/: client.py
kingbird/tests/: base.py  test_kingbird.py  utils.py
kingbird/tests/common/: test_client.py  test_endpoint_cache.py
kingbird/tests/db/: test_quota_db_api.py
kingbird/tests/drivers/: test_cinder_v2.py  test_keystone_v3.py  test_neutron_v2.py  test_nova_v2.py  test_openstack_driver.py
kingbird/tests/tempest/: gate_hook.sh  post_test_hook.sh
kingbird_tempest_tests/: README.rst  plugin.py
kingbird_tempest_tests/services/: base.py
kingbird_tempest_tests/tests/common/: kingbird.py
tempest/: README.rst  plugin.py
tempest/services/: base.py
tempest/tests/common/: kingbird.py
tools/: config-generator.conf  gen-config  install_venv.py  install_venv_common.py  setup-service  with-env.sh
tools/ansible/: README.rst  kingbird_bootstrap.yml
tools/opnfv/: install_kingbird.sh  openrc
tools/salt_formulae/: README.rst  configure_kingbird.sls  create_database.sls  kingbird_template.j2  top.sls
tools/salt_formulae/pillar/: kingbird_service.sls  top.sls
tools/salt_formulae/pillars/: kingbird_service.sls
tools/salt_formulae/salt/: README.rst  admin_tenant_details.py  configure_keystone.sls  configure_kingbird.sls  configure_pillars.sls  create_database.sls  create_endpoints.sls  keystone_configuration.sh  kingbird_service_api_engine.sls  kingbird_template.j2  top.sls  (+1 more)
(+85 files in other folders)
