[metadata]
name = kingbird
summary = Kingbird is a centralised synchronization service for multi-region OpenStack deployments.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    kingbird

[entry_points]
console_scripts =
    kingbird-api = kingbird.cmd.api:main
    kingbird-engine = kingbird.cmd.engine:main
    kingbird-manage = kingbird.cmd.manage:main

oslo.config.opts =
    kingbird.common.config = kingbird.common.config:list_opts
    kingbird.common.manager = kingbird.common.manager:list_opts
    kingbird.engine.engine_config = kingbird.engine.engine_config:list_opts
    kingbird.engine.listener = kingbird.engine.listener:list_opts
    kingbird.engine.quota_manager = kingbird.engine.quota_manager:list_opts
    kingbird.common.api.api_config = kingbird.api.api_config:list_opts
    kingbird.common.baserpc= kingbird.common.baserpc:list_opts
    kingbird.api.controllers.quota_manage= kingbird.api.controllers.quota_manage:list_opts

tempest.test_plugins =
    kingbird_test = tempest.plugin:KingbirdTempestPlugin

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = kingbird/locale
domain = kingbird

[update_catalog]
domain = kingbird
output_dir = kingbird/locale
input_file = kingbird/locale/kingbird.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = kingbird/locale/kingbird.pot
